<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        tools:ignore="MissingConstraints,UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/imageButton"
                android:layout_width="272dp"
                android:layout_height="201dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"

                android:src="@drawable/taxi" />

            <TextView
                android:id="@+id/driver_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:shadowColor="#FFFFFF"
                android:shadowDy="5"
                android:shadowRadius="50"
                android:text="@string/login_and_register"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColorHighlight="#dfc23c"
                android:textColorLink="#dfc23c"
                android:textCursorDrawable="@drawable/fui_idp_button_background_anonymous"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="20sp"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:textStyle="bold"
                android:autofillHints="" />


            <Button
                android:id="@+id/driver_login_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login"
                android:background="@drawable/buttons"
                android:textColor="@color/colorAccent"
                android:drawableStart="@drawable/ic_baseline_login_24"
                android:textSize="16sp" />


            <Button
                android:id="@+id/driver_register_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-60dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/buttons"
                android:drawableStart="@drawable/ic_baseline_how_to_reg_24"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="155dp"
                android:layout_marginBottom="50dp"
                android:checked="true"
                android:shadowColor="#121111"
                android:shadowDy="20"
                android:shadowRadius="50"
                android:text="@string/Customer"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/driver_text"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-77dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="50dp"
                android:shadowColor="#090808"
                android:shadowDy="20"
                android:shadowRadius="30"
                android:text="@string/Driver"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_google_sign_in"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/buttons"
                android:drawableStart="@drawable/googleg_standard_color_18"
                android:text="@string/google"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <Button
                android:id="@+id/back"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-97dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/buttons"
                android:text="@string/back"
                android:textColor="@color/colorAccent"
                android:drawableStart="@drawable/quantum_ic_arrow_back_grey600_24"
                android:textSize="16sp" />



            <TextView
                android:id="@+id/driver_register_link"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="50dp"
                android:text="@string/dont_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />



        </LinearLayout>
    </ScrollView>


</RelativeLayout>