<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomersMapActivity" >


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
                android:background="@drawable/buttons"
                android:textColor="@color/colorAccent"
                android:text="@string/logout"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_settings_24"
                android:background="@drawable/buttons"
                android:textColor="@color/colorAccent"
                android:text="@string/settings"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp">
            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                 />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/driverInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/driverProfileImage"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:padding="20sp"
                android:src="@drawable/profilee"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="40sp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/driverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:paddingBottom="10sp" />

                <TextView
                    android:id="@+id/driverPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:paddingBottom="10sp" />

                <TextView
                    android:id="@+id/driverCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:paddingBottom="10sp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="0.1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/femSits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/sits5t"
                    android:layout_width="30sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/sits"
                    android:orientation="horizontal"
                    android:textColor="#131212"
                    android:textColorHint="#0C0B0B"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/sjuSits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/sits7"
                    android:layout_width="30sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/sits"
                    android:orientation="horizontal"
                    android:textColor="#131212"
                    android:textColorHint="#0C0B0B"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/tolvSits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/sits12"
                    android:layout_width="30sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/sits"
                    android:orientation="horizontal"
                    android:textColor="#131212"
                    android:textColorHint="#0C0B0B"
                    android:textStyle="bold" />


            </RadioGroup>

            <Button
                android:id="@+id/request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/buttons"
                android:textColor="@color/colorAccent"
                android:text="@string/call_driver" />
        </LinearLayout>
    </LinearLayout>



</FrameLayout>